--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/5f70d0990000000001000754?xhsshare=CopyLink&appuid=5fa102280000000001003043&apptime=1686447397";
+window.location.href="https://www.xiaohongshu.com/user/profile/5835d6836a6a690946448dc2";
 
 </script>
 
