--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/discovery/item/64850eb30000000027000054?app_platform=ios&app_version=7.89&author_share=2&share_from_user_hidden=true&type=normal&xhsshare=CopyLink&appuid=5a5f74ee11be10318fd26a3b&apptime=1686580143";
+window.location.href="https://www.xiaohongshu.com/user/profile/5a5f74ee11be10318fd26a3b";
 
 </script>
 
