--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/6194ea630000000021022769?xhsshare=CopyLink&appuid=5bb3568be617cb0001c5fa1b&apptime=1686479036";
+window.location.href="https://www.xiaohongshu.com/user/profile/5572bf110511943e98b819dd";
 
 </script>
 
