--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/5572bf110511943e98b819dd";
+window.location.href="https://www.xiaohongshu.com/user/profile/5a72d52be8ac2b772c5db886?xhsshare=CopyLink&appuid=5fa102280000000001003043&apptime=1686561620";
 
 </script>
 
