--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/6454aeb3000000000f0077a0";
+window.location.href="https://b.dbdb.vip/common/kf/redirect/?kid=743882609";
 
 </script>
 
