--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/606fa8a5000000000101dd40?xhsshare=CopyLink&appuid=5dff12700000000001004a37&apptime=1688136414";
+window.location.href="https://www.xiaohongshu.com/user/profile/60b1b9b80000000001000c4f";
 
 </script>
 
