--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/63ef8cf0000000000f010241";
+window.location.href="https://www.xiaohongshu.com/user/profile/5c6a085c000000001000cba6?xhsshare=CopyLink&appuid=5c6a085c000000001000cba6&apptime=1694326817";
 
 </script>
 
